--- a/main.css
+++ b/main.css
@@ -285,7 +285,6 @@ a .cheesecake{
 }
 .cardContainer{
     width: 100%;
-    height: 40vh;
     position: absolute;
     bottom: 0px;
     display: block;
@@ -299,7 +298,7 @@ a .cheesecake{
 }
 
 .cardContainer p{
-    width: 800px;
+    width: 70%;
     font-size: 1rem;
     margin: 25px auto;
     padding-bottom: 20px;
@@ -730,7 +729,6 @@ transform: rotate(45deg) translate(-7px, -6px);
     .cardContainer{
         display: block;
         width: 100%;
-        height: 55vh;
         text-align: center;
         margin: 0 auto;
     }
@@ -741,8 +739,9 @@ transform: rotate(45deg) translate(-7px, -6px);
 
     .cardContainer p{
         width: 90%;
-        font-size: .6rem;
+        font-size: .7rem;
         text-align: center;
+        padding: 10px;    
     }
     footer{
         background-color: plum;
