--- a/cakepage.css
+++ b/cakepage.css
@@ -11,6 +11,7 @@ body{
     font-family: "Poppins";
     position: relative;
     overflow-y: scroll;
+    
 }
 
 ::-webkit-scrollbar{
@@ -38,6 +39,7 @@ body{
     top: 0px;
     transition: all 1s ease;
     z-index: 3;
+    scroll-behavior: smooth;
 }
 nav{
     position: fixed;
@@ -206,7 +208,6 @@ nav h1{
 /* Roll Cakes */
 .rollCakes{
     position: absolute;
-    top: 20vh;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -228,7 +229,6 @@ nav h1{
 /* Dreamcake and Cheesecake */
 .dreamCake{
     position: absolute;
-    top: 20vh;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -245,7 +245,7 @@ nav h1{
 /* cupcakes */
 .cupCake{
     position: absolute;
-    top: 20vh;
+
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -262,7 +262,7 @@ nav h1{
 /* sweet bites */
 .sweetBites{
     position: absolute;
-    top: 20vh;
+
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -320,6 +320,111 @@ footer p a{
     color: white;
     text-decoration: none;
 }
+.contactus{
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 70vh;
+    top: 10vh;
+    left: 0;
+    margin: 0 auto;
+    background-color: rgb(243, 197, 243);
+    z-index: 3;
+    color: white;
+    transform: translateY(-150%);
+    transition: all .5s ease;
+}
+
+.contactActive{
+    transform: translateY(0);;
+}
+
+.card{
+    display: inline-block;
+    margin: 0 auto;
+    width: 100%;
+    height: 15vh;
+    background-color: plum;
+}
+
+.card h1{
+    font: 1.9rem "Poppins";
+    margin-top: 20px;
+    margin-left: 10vw;
+}
+.card p{
+    font: 1rem "Poppins";
+    margin-left: 10vw;
+}
+.card i{
+    position: absolute;
+    right: 20px;
+    top: 10px;
+    cursor: pointer;
+    transition: all .5s ease;
+}
+.card i:active{
+    transform: scale(.8);
+    transform: rotate(105deg);
+    opacity: .5;
+}
+
+.contactus form{
+    display: block;
+    width: 80%;
+    margin: 10px auto;
+}
+.contactus form h3{
+    margin-bottom: 10px;
+}
+.contactus form input{
+    width: 100%;
+    height: 3vh;
+    margin-bottom: 5px;
+    border-style: none;
+    border-radius: 5px;
+    outline: 0;
+    font: 1rem "Poppins";
+}
+
+
+textarea{
+    width: 100%;
+    font: 1rem "Poppins" ;
+    resize: none;
+    border-style: none;
+    outline: 0;
+}
+.contactus button{
+    width: 10%;
+    height: 5vh;
+    margin-top: 20px;
+    margin-right: 130px;
+    border: none;
+    float: right;
+    font: 1rem "Poppins";
+    color: white;
+    background-color: plum;
+    transition: all .5s ease;
+    cursor: pointer;
+    outline: 0;
+}
+button:active{
+    transition: all .5s ease;
+    outline: 0;
+    transform: scale(.8);
+}
+.contactactive{
+    position: fixed;
+    transform: translateY(0);
+    transition: all .5s ease;
+}
+.contactactive1{
+    position: fixed;
+    transform: translateY(-100%);
+    transition: all .5s ease;
+}
+
 
 
 @media screen and (max-width: 768px){
@@ -448,7 +553,6 @@ footer p a{
         display: flex;
         flex-wrap: wrap;
         width: 100%;
-       
         justify-content: center;
         align-items: center;
         margin: 0 auto;
@@ -457,10 +561,10 @@ footer p a{
         display: flex;
         flex-wrap: wrap;
         width: 100%;
-       
         justify-content: center;
         align-items: center;
         margin: 0 auto;
+        z-index: -1;
     }
     .cupCake{
         display: flex;
