--- a/main.css
+++ b/main.css
@@ -380,7 +380,7 @@ footer p a{
     right: 2vw;
     bottom: 0;
     font-size: 60px;
-    color: plum;
+    color: plum;swt
     z-index: 2;
     opacity: 1;
     cursor: pointer;
@@ -742,7 +742,7 @@ transform: rotate(45deg) translate(-7px, -6px);
     footer{
         background-color: plum;
         position: absolute;
-        bottom: -880px;
+        bottom: -400px;
         width: 100%;
         height: 30vh;
         display: block;
@@ -790,7 +790,7 @@ transform: rotate(45deg) translate(-7px, -6px);
     }
     .scrollAct{
         position: absolute;
-        bottom: -98vh;
+        bottom: -28vh;
         right: 2vw;
         font-size: 3rem;
         color: plum;
@@ -808,5 +808,11 @@ transform: rotate(45deg) translate(-7px, -6px);
         z-index: 2;
         opacity: 1;
         cursor: pointer;
+    }
+    .one{
+        display: none;
+    }
+    .two{
+        display: none;
     }
 }
