--- a/main.css
+++ b/main.css
@@ -12,8 +12,7 @@
 body{
     font-family: "Poppins";
     overflow-y: scroll;
-    overflow-x: hidden;
-    
+    overflow-x: scroll;
 }
 ::-webkit-scrollbar{
     display: none;
@@ -319,15 +318,16 @@ a .cheesecake{
     margin: 5vh auto;
 }
 
-.slider::-webkit-scrollbar{
-    display: none;
-}
+
   
   .slides{
     width: 500%;
     height: 70vh;
     display: flex;
-
+    overflow-x: s;
+  }
+  .slides::-webkit-scrollbar{
+    display: none;
   }
   
   .slides input{
