--- a/main.css
+++ b/main.css
@@ -315,7 +315,7 @@ a .cheesecake{
     height: 100%;
     border-radius: 10px;
     overflow-x: scroll;
-    margin: 20vh auto;
+    margin: 0 auto;
 }
 
 
@@ -325,6 +325,7 @@ a .cheesecake{
     height: 80vh;
     display: flex;
     overflow-x: scroll;
+    overflow-y:unset;
   }
   .slides::-webkit-scrollbar{
     display: none;
@@ -354,6 +355,7 @@ a .cheesecake{
     margin-top: -40px;
     display: flex;
     justify-content: center;
+    z-index: 9999;
   }
   
   .manual-btn{
@@ -793,14 +795,14 @@ transform: rotate(45deg) translate(-7px, -6px);
         width: 100%;
         height: 50vh;
         border-radius: 10px;
-        overflow-x: scroll;
+        overflow-x: hidden;
         margin: 5vh auto;
     
     }
       
       .slides{
         width: 500%;
-        height: 70vh;
+        height: 50vh;
         display: flex;
         
       }
@@ -815,17 +817,53 @@ transform: rotate(45deg) translate(-7px, -6px);
       }
       
       .slide img{
-        width: 100%;
-        height: 70vh;
+        width: 95%;
+        height: 50vh;
         object-fit: cover;
-        
+        margin: 0 auto;
+        display: block; 
       }
       .navigation-manual{
         position: absolute;
         display: flex;
         width: 100%;
         justify-content: center;
-        margin-top: 55vh;
+        margin-top: 35px;
+      }
+      .manual-btn{
+        border: 2px solid #ff9b9b;
+        padding: 5px;
+        border-radius: 10px;
+        cursor: pointer;
+        transition: 1s;
+      }
+      
+      .manual-btn:not(:last-child){
+        margin-right: 40px;
+      }
+      
+      .manual-btn:hover{
+        background: #ff9b9b;
+      }
+      
+      #radio1:checked ~ .first{
+        margin-left: 0;
+      }
+      
+      #radio2:checked ~ .first{
+        margin-left: -20%;
+      }
+      
+      #radio3:checked ~ .first{
+        margin-left: -40%;
+      }
+      
+      #radio4:checked ~ .first{
+        margin-left: -60%;
+      }
+      
+      #radio5:checked ~ .first{
+        margin-left: -80%;
       }
       #radio1:checked ~ .navigation-auto .auto-btn1{
         background: #ff9b9b;
@@ -852,7 +890,15 @@ transform: rotate(45deg) translate(-7px, -6px);
         justify-content: center;
         margin-top: 55vh;
       }
-
+      .navigation-auto div{
+        border: 2px solid #ff9b9b;
+        padding: 5px;
+        border-radius: 10px;
+        transition: 1s;
+      }
+        .navigation-auto div:not(:last-child){
+            margin-right: 40px;
+        }
     footer{
         background-color: plum;
         position: absolute;
