--- a/cart.css
+++ b/cart.css
@@ -309,6 +309,21 @@ button:focus{
 #date::placeholder{
     color: white;
 }
+
+.orderForm #date:focus{
+    width: 100%;
+    height: 5vh;
+    border: none;
+    border-radius: 5px;
+    margin-top: 15px;
+    font-family: "Poppins";
+    text-align: center;
+    background-color: #efefef4d;
+    color: white;
+    font-size: 15px
+}
+
+
 .orderForm i:hover{
     color: white;
     transform: scale(1.3);
