--- a/cakepage.css
+++ b/cakepage.css
@@ -325,7 +325,7 @@ footer p a{
     position: absolute;
     display: block;
     width: 100%;
-    height: 70vh;
+    height: 500px;
     top: 10vh;
     left: 0;
     margin: 0 auto;
@@ -652,7 +652,10 @@ button:active{
         margin: 0;
         width: 100vw;
     }
-    
+    .contactus button{
+        width: 24%;
+        margin-right: 40px;
+    }
 
 }
 
