--- a/cakepage.css
+++ b/cakepage.css
@@ -653,8 +653,18 @@ button:active{
         width: 100vw;
     }
     .contactus button{
-        width: 24%;
+        width: 80px;
+        height: 40px;
         margin-right: 40px;
+    }
+    .contactus .form input{
+        width: 100%;
+        height: 30px;
+        margin-bottom: 5px;
+        border-style: none;
+        border-radius: 5px;
+        outline: 0;
+        font: 1rem "Poppins";
     }
 
 }
