--- a/main.css
+++ b/main.css
@@ -499,7 +499,7 @@ a:hover .cheesecake{
     position: absolute;
     display: block;
     width: 100%;
-    height: 65vh;
+    height: 500px;
     top: 0;
     left: 0;
     margin: 0 auto;
@@ -540,15 +540,15 @@ a:hover .cheesecake{
     opacity: .5;
 }
 
-.contactus form{
+.contactus .form{
     display: block;
     width: 80%;
     margin: 10px auto;
 }
-.contactus form h3{
+.contactus .form h3{
     margin-bottom: 10px;
 }
-.contactus form input{
+.contactus .form input{
     width: 100%;
     height: 3vh;
     margin-bottom: 5px;
@@ -567,19 +567,24 @@ textarea{
 }
 
 
-.contactus form input[type="button"]{
-    width: 10%;
-    height: 5vh;
-    margin-top: 20px;
-    float: right;
-    font: 1rem "Poppins";
-    color: white;
-    background-color: plum;
-    transition: all .5s ease;
-    cursor: pointer;
+.contactus button{
+  width: 10%;
+  height: 5vh;
+  margin-top: 20px;
+  margin-right: 130px;
+  border: none;
+  float: right;
+  font: 1rem "Poppins";
+  color: white;
+  background-color: plum;
+  transition: all .5s ease;
+  cursor: pointer;
+  outline: 0;
 }
-input[type="button"]:active{
-    transform: scale(.8);
+button:active{
+  transition: all .5s ease;
+  outline: 0;
+  transform: scale(.8);
 }
 .contactactive{
     position: fixed;
@@ -939,4 +944,18 @@ transform: rotate(45deg) translate(-7px, -6px);
     .two{
         display: none;
     }
+    .contactus button{
+      width: 80px;
+      height: 40px;
+      margin-right: 40px;
+  }
+  .contactus .form input{
+      width: 100%;
+      height: 30px;
+      margin-bottom: 5px;
+      border-style: none;
+      border-radius: 5px;
+      outline: 0;
+      font: 1rem "Poppins";
+  }
 }
