--- a/cart.css
+++ b/cart.css
@@ -57,9 +57,8 @@ nav h1{
 }
 .nav-link{
     display: flex;
-    width: 30%;
+    width: 35%;
     justify-content: space-around;
-    
     transition:all .5s ease-in;
 }
 .nav-link li{
@@ -68,9 +67,10 @@ nav h1{
     width: 20%;
     align-items: center;
 }
-.nav-link li:last-child{
-    margin-right: 20px;
+.nav-link li:nth-last-of-type(2){
+    margin-right: 80px;
 }
+
 .nav-link a, .nav-link div{
     color: white;
     text-decoration: none;
@@ -78,15 +78,10 @@ nav h1{
 }
 
 .nav-link a h4, .nav-link div h4{
-    width: 50vw;
+    width: 15vw;
     font-size: 1.3rem;
     transition: all .5s ease
 }
-
-.nav-link li:hover h4{
-    color: purple;
-}
-
 
 
 .dropdown{
@@ -146,13 +141,13 @@ button:focus{
     text-transform: uppercase;
     cursor: pointer;
     color: white;
-    margin-right: 5px;
+    margin-left: 5px;
 }
 .select{
     width: 50vw;
     height: 100%;
     text-align: center;
-    margin-left: 30px;
+    margin-left: 40px;
 }
 .arrow{
     
